Bug 1927545 - Allow fmt with C++20. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D227082